# arx-2d

./: .gitignore  CMakeLists.txt  GUIDE.md  app.cpp  arx.hpp  engine.hpp
cmake/: arxConfig.cmake.in
draw/: draw.h
entity/: behavior.h  entity.cpp  entity.h  fade.h  p_registry.cpp  p_registry.h  vec2.h
game/: audio.cpp  audio.h  blackboard.cpp  blackboard.h  camera.cpp  camera.h  function_registry.h  game.cpp  game.h  input.cpp  input.h  scene.cpp  scene.h  textutil.h  tilecollide.cpp  tilecollide.h  timing.h  transition.cpp  transition.h
